<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EvilHangman</string>
    <string name="settings">Settings</string>
    <string name="title">Evil Hangman</string>
    <string name="restart">Restart game</string>
    <string name="play_again">Play again</string>
    <string name="title_activity_lost">LostActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="youlost">You lost!</string>
    <string name="youwin">You won!</string>
    <string name="current_guesses">Je hebt nog ### pogingen over</string>
    <string name="settings_evil">Evil Hangman</string>
    <string name="settings_evil_desc">Does the PC cheat?</string>
    <string name="settings_wordlength">Word length</string>
    <string name="settings_wordlength_desc">Adjust the length of the word that you have to guess</string>
    <string name="settings_guesses">Amount of guesses</string>
    <string name="settings_guesses_desc">Adjust the amount of guesses you have</string>
    <string name="title_activity_win">WinActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_highscores">Highscores</string>

</resources>